working on card display and tests

--- a/Resources/Properties/Resources.resx
+++ b/Resources/Properties/Resources.resx
@@ -274,4 +274,7 @@
   <data name="KS" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\images\KS.png;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="Joker" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\images\back.png;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
